# PeakRDL-check

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROOF.md  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/scripts/: validate_pr_title.py
.github/workflows/: ci.yml  pr-title.yml  publish-pypi.yml  publish-testpypi.yml  release.yml
action/: action.yml  review.py
benchmarks/: report.html  results.csv  results.json
benchmarks/raw-results/: 20260713-131323-peakrdl-check-1k-run0.json  20260713-131323-regreview-1k-run0.json  20260713-131324-peakrdl-html-1k-run0.json  20260713-131921-peakrdl-check-1k-run0.json  20260713-131921-peakrdl-check-1k-run1.json  20260713-131921-peakrdl-check-1k-run2.json  20260713-131921-regreview-1k-run0.json  20260713-131921-regreview-1k-run1.json  20260713-131921-regreview-1k-run2.json  20260713-131922-peakrdl-html-1k-run0.json  20260713-131923-peakrdl-html-1k-run1.json  20260713-131924-peakrdl-html-1k-run2.json  20260713-131926-peakrdl-check-10k-run0.json  20260713-131926-regreview-10k-run0.json  20260713-131929-peakrdl-check-10k-run1.json  20260713-131929-regreview-10k-run1.json  20260713-131931-peakrdl-check-10k-run2.json  20260713-131931-regreview-10k-run2.json  20260713-131934-peakrdl-check-1k-run0.json  20260713-131934-peakrdl-check-1k-run1.json  20260713-131934-peakrdl-check-1k-run2.json  20260713-131934-regreview-1k-run0.json  20260713-131934-regreview-1k-run1.json  20260713-131934-regreview-1k-run2.json  20260713-131935-peakrdl-html-1k-run0.json  20260713-131936-peakrdl-html-1k-run1.json  20260713-131937-peakrdl-html-1k-run2.json  20260713-131939-peakrdl-check-10k-run0.json  20260713-131939-regreview-10k-run0.json  20260713-131941-peakrdl-check-10k-run1.json  20260713-131941-regreview-10k-run1.json  20260713-131944-peakrdl-check-10k-run2.json  20260713-131944-regreview-10k-run2.json  (+66 more)
benchmarks/scripts/: bench.py  (+5 more)
diff-corpus/: report.html  results.json
docs/: architecture.md  baseline-methodology.md  benchmarking.md  canonical-model.md  community-listing.md  development.md  diff-rules.md  ecosystem-review.md  implementation-plan.md  incremental-builds.md  known-limitations.md  pinned-versions.txt  problem-reproduction.md  progress.md  storage.md
patches/: systemrdl-compiler-line-index.diff
peakrdl_check/: __init__.py  __peakrdl__.py  adapter.py  cli.py  diff.py  fixture_gen.py  incremental.py  lineindex.py  report.py  server.py  storage.py
regreview/: __init__.py  adapter.py  canonical.py  cli.py  diff.py  fixture_gen.py  incremental.py  policy.py  report.py  server.py  storage.py
scripts/: benchmark-baseline  benchmark-compare  benchmark-peakrdl-check  benchmark-regreview  bootstrap  build-proof-report  build_proof.py  demo  dev  generate-fixtures  mutation_tests.py  profile_source_locations.py  run_corpus.py  simulate_pr_workflow.sh  test  verify-incremental-equivalence  verify_incremental_equivalence.py
tests/: conftest.py  test_canonical.py  test_cli.py  test_diff_rules.py  test_incremental.py  test_index_diff.py  test_peakrdl_plugin.py  test_security.py  test_storage.py
(+294 files in other folders)
