[project]
name = "peakrdl-check"
version = "0.1.0"
description = "Semantic compatibility analysis and configurable quality gates for SystemRDL specifications"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "systemrdl-compiler==1.32.2",
]

[project.optional-dependencies]
baseline = ["peakrdl==1.5.0", "peakrdl-html==2.12.2"]
dev = ["pytest==9.1.1"]

[project.scripts]
peakrdl-check = "peakrdl_check.cli:main"
peakrdl-check-fixture = "peakrdl_check.fixture_gen:main"

[project.entry-points."peakrdl.exporters"]
check = "peakrdl_check.__peakrdl__:Exporter"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["peakrdl_check*"]
